# cortex

./: Cargo.toml  LICENSE  README.md  docker-compose.yml
.github/workflows/: build.yml  cov.yml  lint.yml
cortex/: Cargo.toml  README.md
cortex/examples/: mongo.rs  mongo_replica.rs  postgres.rs  postgres_print.rs  runtime_switch.rs  sqlite.rs
cortex/src/: lib.rs
cortex/src/db/: mod.rs
cortex/src/db/connection/: mod.rs
cortex/src/db/connection/mongodb/: mod.rs
cortex/src/db/connection/postgres/: mod.rs
cortex/src/db/connection/sqlite/: mod.rs
cortex/src/db/cortex/: mod.rs  mongodb.rs  postgres.rs
cortex/src/db/objects/: composite_type.rs  database.rs  mod.rs  procedure.rs  role.rs  sequence.rs  statement.rs  step.rs  table.rs  trigger.rs  user.rs  views.rs
cortex/src/db/producer/: mod.rs
cortex/src/db/producer/mongodb/: collection.rs  database.rs  mod.rs  statement.rs  step.rs  table.rs
cortex/src/db/producer/postgres/: database.rs  mod.rs  statement.rs  step.rs  table.rs
cortex/src/db/producer/postgres/tests/: table.rs
cortex/src/db/producer/sqlite/: database.rs  mod.rs  statement.rs  step.rs  table.rs
cortex_connection/: Cargo.toml  README.md
cortex_connection/src/: lib.rs
cortex_generation/: Cargo.toml  README.md
cortex_generation/examples/: create_table_structs.rs
cortex_generation/src/: lib.rs  stored_proc_extractor.rs  table_extractor.rs
cortex_generation/tests/: it.rs
examples/generate/: Cargo.toml  README.md  build.rs
examples/generate/src/: main.rs  schema.rs
examples/schema/: Cargo.toml  README.md
examples/schema/examples/: schema.rs
examples/schema/src/: lib.rs  main.rs
macros/: Cargo.toml
macros/src/: lib.rs
macros/tests/: it.rs
scripts/: rsinit.sh
src/: lib.rs  main.rs
src/db/: client.rs  mod.rs
src/db/connection/: mod.rs
src/db/connection/mongodb/: mod.rs
src/db/objects/: database.rs  mod.rs  procedure.rs  sequence.rs  statement.rs  step.rs  table.rs
src/db/producer/: mod.rs  postgres.rs
src/db/producer/mongodb/: mod.rs  step.rs
src/db/producer/postgres/: database.rs  mod.rs  statement.rs  table.rs
src/db/producer/tests/: postgres.rs
