[package]
name = "cortex"
version = "0.1.0"
edition = "2021"

[features]
postgres = ["dep:postgres"]
mongodb = ["dep:mongodb"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
postgres = { version = "0.19.0", optional = true }
mongodb = { version = "2.0.0", optional = true }
